<resources>
    <string name="app_name">企业云教育</string>
    <string name="fs_loading">加载中...</string>
    <string name="error_json_msg">数据解析失败</string>
    <string name="error_service_msg">网络不佳，稍后重试</string>
    <string name="personal_noSimCard">您的手机没有手机卡，暂不支持拨打热线电话</string>
    <string name="cancle">取消</string>
    <string name="confirm2">确定</string>
    <string name="go_to_setting">去设置</string>
    <string name="firstpage">首页</string>
    <string name="course_recommend">学习推荐</string>
    <string name="course_new">课程上新</string>
    <string name="good_personal">我是学霸</string>
    <string name="studying">大家在学</string>
    <string name="foot_layout_loading">数据加载中......</string>
    <string name="foot_layout_no_data">没有更多数据了</string>
    <string name="more">更多</string>
    <string name="count_study">%1s次</string>
    <string name="place_integral_count">%1s积分</string>
    <string name="look_count">%1s次观看</string>
    <string name="teachername">主讲人：%1s</string>
    <string name="network_error">加载失败，请刷新后重试!</string>
    <string name="test_pass">未通过</string>
    <string name="test_passed">已通过</string>
    <string name="back">返回</string>
    <string name="title_course_center">课程中心</string>
    <string name="test">考核</string>
    <string name="test_title">%1s%2s（%3s）</string>
    <string name="test_single_select">单选题</string>
    <string name="test_more_select">多选题</string>
    <string name="introduce">介绍</string>
    <string name="comment">评论</string>
    <string name="comment_push">发表评论</string>
    <string name="course_content">%1s五星好评（%2s人）</string>
    <string name="comment_no_data_alert">暂无评论，来第一个发表吧！</string>
    <string name="comment_title">课程评论</string>
    <string name="comment_hint">课程怎么样？期待您评论</string>
    <string name="submit">提交</string>
    <string name="comment_level1">差评</string>
    <string name="comment_level2">一般</string>
    <string name="comment_level3">良好</string>
    <string name="comment_level4">好评</string>
    <string name="comment_recommend">强烈推荐</string>
    <string name="null_comment_alert_msg">评论不能为空</string>
    <string name="teachertitle">师资介绍</string>
    <string name="course_introduction_title">课程介绍</string>
    <string name="allstudy_clearancerate">全员学习通关率</string>
    <string name="look_all">查看全部</string>
    <string name="ranklist">名次</string>
    <string name="store">门店</string>
    <string name="finishrate">完成率</string>
    <string name="time_ranklist">学习在线平均时长排名</string>
    <string name="time_length">时长</string>
    <string name="once_clearancerate">一次性通关率</string>
    <string name="online_timelength">在线学习时长</string>
    <string name="clearancerate">通关率</string>
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="time">时间</string>
    <string name="look_count_title">观看次数</string>
    <string name="title_notice">企业公告</string>
    <string name="living">进行中</string>
    <string name="history_live">回放</string>
    <string name="change_user">切换身份</string>
    <string name="collected">收藏</string>
    <string name="history">历史</string>
    <string name="point">积分</string>
    <string name="upload_share">上传分享</string>
    <string name="releaseshare">发布分享</string>
    <string name="setting">设置</string>
    <string name="collected_my">我的收藏</string>
    <string name="look_history">浏览历史</string>
    <string name="share_manager">分享管理</string>
    <string name="integralRule">积分规则</string>
    <string name="integral_timeslect">时间筛选，精确到日</string>
    <string name="change_user_head">更换头像</string>
    <string name="nickname">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称：</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区：</string>
    <string name="store_whore">所属店面：</string>
    <string name="position">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位：</string>
    <string name="introduction">简&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;介：</string>
    <string name="save">保存</string>
    <string name="album_path">本地相册</string>
    <string name="carema_path">相机拍摄</string>
    <string name="carema_permission_alert">使用该功能需要拍照权限，请前往系统设置开启权限。</string>
    <string name="album_permission_alert">使用该功能需要访问存储空间权限，请前往系统设置开启权限。</string>
    <string name="title_change_personalinfo">编辑资料</string>
    <string name="share_title">分享标题</string>
    <string name="hint_share_title">请输入您的分享标题(12个字以内)</string>
    <string name="share_classify">分享分类</string>
    <string name="hint_share_classify">请选择您的分享分类</string>
    <string name="hint_share_name">请输入您的姓名</string>
    <string name="share_address">归属城市</string>
    <string name="please_select">请选择</string>
    <string name="share_store">所属店面</string>
    <string name="share_position">个人职位</string>
    <string name="share_content">分享内容</string>
    <string name="please_input">请输入</string>
    <string name="share_video">上传视频</string>
    <string name="rank_list">排名</string>
    <string name="personal">我的</string>
    <string name="store_ranklist">门店排行</string>
    <string name="staff">员工</string>
    <string name="time_today">今日时间</string>
    <string name="time_all">累计时间</string>
    <string name="allstaff_study">全员学习培训</string>
    <string name="time_today_title">今日学习时间排行榜</string>
    <string name="time_alltime_title">累计学习时间排行榜</string>
    <string name="login_count_ranklist">登录人数排行</string>
    <string name="share_count_ranklist">累计分享排行</string>
    <string name="people_count">人数</string>
    <string name="share_count">次数</string>
    <string name="study_course">学习的课程</string>
    <string name="staff_percent_new">新老员工比列</string>
    <string name="staff_percent_city">城市分布比例</string>
    <string name="staff_percent_eduction">学历比例</string>
    <string name="staff_percent_age">年龄比例</string>
    <string name="staff_percent_sex">男女比例</string>
    <string name="staff_info_manager">员工信息统计</string>
    <string name="hint_account">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_staff">员工登录</string>
    <string name="login_manager">管理登录</string>
    <string name="login_agreeement">我已阅读并同意隐私协议和隐私政策</string>
    <string name="pricacy_agreement">隐私协议</string>
    <string name="pricacy_policy">隐私政策</string>
    <string name="alert_login_account">账号不能为空</string>
    <string name="alert_login_password">密码不能为空</string>
    <string name="hint_info_name">请输入您的姓名</string>
    <string name="sex2">性别</string>
    <string name="age">年龄</string>
    <string name="hint_age">请输入您的年龄</string>
    <string name="info_city">现居地城市</string>
    <string name="phone">手机号</string>
    <string name="hint_phone">请输入您的手机号</string>
    <string name="eduction">学历</string>
    <string name="position_time">入职时间</string>
    <string name="store_whore2">所属店面</string>
    <string name="position2">职位</string>
    <string name="work_exp1">工作经历</string>
    <string name="work_exp2">工作经验</string>
    <string name="perfect_info">完善信息</string>
    <string name="finish">完成</string>
    <string name="share_cover_modle">封面模板</string>
    <string name="alert_login_name">姓名不能为空</string>
    <string name="alert_login_age">年龄不能为空</string>
    <string name="Search_locate_content">输入城市名或拼音查询</string>
    <string name="alert_login_city">请选择现居住地城市</string>
    <string name="alert_login_phone">手机号不能为空</string>
    <string name="alert_login_eduction">请选择您的学历</string>
    <string name="alert_login_sex">请选择您的性别</string>
    <string name="alert_login_store">请选择您的所属店面</string>
    <string name="alert_login_position">请选择您的职位</string>
    <string name="alert_login_entrydate">请选择您的入职时间</string>
    <string name="alert_login_workexp">请选择您的工作经历</string>
    <string name="place_hengxian">%1s-%2s</string>
    <string name="alert_login_workhours">请选择您的工作经验</string>
    <string name="place_time">%1s-%2s-%3s</string>
    <string name="alert_test">请按自上而下的顺序完成考试！</string>
    <string name="course_id_null_alert">课程id不能为空</string>
    <string name="special_id_null_alert">专题id不能为空</string>
    <string name="title_champion_sharing">冠军分享</string>
    <string name="alert_share_title">分享标题不能为空</string>
    <string name="alert_share_classify">请选择您的分享分类</string>
    <string name="alert_share_cover">请选择封面模板</string>
    <string name="alert_share_content">分享内容不能为空</string>
    <string name="alert_share_video">请选择您要分享的视频</string>
    <string name="success_release_share">分享成功</string>
    <string name="point_store">学员积分平均排名</string>
    <string name="comment_count">%1s条评论</string>
    <string name="comment_count_title">评论次数</string>
    <string name="post_test_answer">交卷</string>
    <string name="alert_test_answer">您第%1s道题还未作答，请答完后在提交！</string>
    <string name="test_pass_not">很遗憾您没有通过考核，请回去重新学习,答对%1s题，答错%2s题。</string>
    <string name="goto_study">去学习</string>
    <string name="next_course">下一课程</string>
    <string name="test_pass_yes">恭喜您通过考核，可以进行\n下一阶段学习</string>
    <string name="look_count2">%1s次</string>
    <string name="video_file_limit">当前视频文件过大，请控制在800M以内</string>
    <string name="alert_live_no">暂无直播</string>
    <string name="alert_historylive_no">暂无历史直播</string>
    <string name="live_online">线上直播</string>
    <string name="integral_count">%1s积分</string>
    <string name="people_position_count">%1s位</string>
    <string name="clearancerate_max">最高通关率</string>
    <string name="live_count">分享次数</string>
    <string name="share_count_max">分享次数最多者</string>
    <string name="studyrate_max">最喜爱的课程</string>
    <string name="place_people">%1s人</string>
    <string name="place_today_time">今日学习总时长：%1s小时</string>
    <string name="place_hours_minutes">%1s小时%2s分钟</string>
    <string name="place_all_time">总学习时长：%1s小时</string>
    <string name="place_integral">积分总额：%1s分</string>
    <string name="place_integral_point">积分：%1s分</string>
    <string name="staff_nodata">暂无员工</string>
    <string name="place_age">%1s岁</string>
    <string name="place_entry_time">入职时间：%1s</string>
    <string name="place_timeall_integral">学习总时长：%1s小时&#160;&#160;&#160;&#160;积分总额：%2s分</string>
    <string name="place_today_time2">今日学习\n%1s分钟</string>
    <string name="place_day">连续学习\n%1s天</string>
    <string name="place_time_hours">累计学习\n%1s小时</string>
    <string name="title_studydetails">学习详情</string>
    <string name="study_minute">已学习%1s分钟</string>
    <string name="studyed_minute">已学习%1s</string>
    <string name="clear_catch">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="alert_logout">您确定要退出登录吗？</string>
    <string name="alert_clearcatch">您确定要清空缓存吗?</string>
    <string name="comment_send">发布</string>
    <string name="hint_comment">好话一句句，让人心情变美丽</string>
    <string name="comment_all">全部评论</string>
    <string name="place_championshare_msg">分享人：%1s\n个人职位：%2s\n归属城市：%3s\n归属店面：%4s</string>
    <string name="share_introduction">分享介绍</string>
    <string name="title_stafflist">员工列表</string>
    <string name="store_list">门店列表</string>
    <string name="place_spaceboarf">%1s&#160;&#160;&#160;&#160;%2s</string>
    <string name="speed_1">1.0X</string>
    <string name="speed_125">1.25X</string>
    <string name="speed_150">1.50X</string>
    <string name="speed">倍速</string>
    <string name="delete">删除</string>
    <string name="title_storeall">门店总览</string>
    <string name="alert_login_private">请登录前阅读并同意相关协议！</string>
    <string name="hint_search_course">搜索课程/老师</string>
    <string name="hot_search">热门搜索</string>
    <string name="connect_people">联系人</string>
    <string name="connect_phone">电&#160;&#160;&#160;&#160;话</string>
    <string name="connect_address">地&#160;&#160;&#160;&#160;址</string>
    <string name="hint_connect_address">详细到门牌号</string>
    <string name="hint_sharecontent">请输入分享内容（200个字以内）</string>
    <string name="share_type">发布类型</string>
    <string name="video">视频</string>
    <string name="filename">文件</string>
    <string name="picture">图片</string>
    <string name="share_file">上传文件</string>
</resources>