<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <RadioGroup
        android:id="@+id/mainBottomRG"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px95"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/firstPageRB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_firstpage"
            android:drawablePadding="@dimen/px10"
            android:button="@null"
            android:checked="true"
            android:textColor="@color/theme_text_color"
            android:textSize="@dimen/SP10"
            android:text="@string/firstpage"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/classifyRB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_classify"
            android:drawablePadding="@dimen/px10"
            android:button="@null"
            android:text="@string/rank_list"
            android:textColor="@color/color_595757"
            android:textSize="@dimen/SP10"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/personalRB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_personal"
            android:drawablePadding="@dimen/px10"
            android:button="@null"
            android:text="@string/personal"
            android:textColor="@color/color_595757"
            android:textSize="@dimen/SP10"
            android:gravity="center"/>
    </RadioGroup>

    <View
        android:id="@+id/lineMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:background="@color/color_d7"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomRG"/>
    <FrameLayout
        android:id="@+id/fragmentMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lineMain"/>

</androidx.constraintlayout.widget.ConstraintLayout>